refactor queries and add config
